# GuessWhoNPB2024v3

./: CMakeLists.txt  GWBaseball2024  Game.h  Player.h  README.md  imgurl.txt  players.csv
linux-ubuntu/: Game.cpp  Player.cpp  PlayerManager.cpp  README.md
macOS/: Game.cpp  Game.h  PlayerManager.h  README.md  main
release/: GWBaseball2024
windows/: GWBaseball2024.cpp  GWBaseball2024.vcxproj  GWBaseball2024.vcxproj.filters  Game.cpp  Game.h  Player.cpp  README.md  player.h  playerManager.cpp  playerManager.h
windows/GWBaseball2024/x64/Debug/: GWBaseball2024.exe.recipe  vc143.idb
windows/GWBaseball2024/x64/Debug/GWBaseball2024.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GWBaseball2024.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
